--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
+    "chart.js": "^4.2.1",
     "js-cookie": "^3.0.1",
     "multiselect-react-dropdown": "^2.0.25",
     "react": "^18.2.0",
